# vial-typing

./: .gitignore  LICENSE  Makefile  README-ja.md  README.md  app.js  biome.json  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  style.css  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
data/: en_words.json  jp_words.json
docs/: app-overview-ja.md  app-overview.md
src/: globals.d.ts  index.html  main.ts  main.tsx  style.css  vendor.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: App.tsx  DevicePicker.css  DevicePicker.tsx  GuidedPanel.css  GuidedPanel.tsx  Header.css  Header.tsx  KeyboardPanel.css  KeyboardPanel.tsx  ResultDialog.css  ResultDialog.tsx  StatBar.css  StatBar.tsx  Toolbar.css  Toolbar.tsx  TypePanel.css  TypePanel.tsx  keyChartDraw.ts  useApp.ts
src/data/: en_sents.json  en_words.json  jp_sents.json  jp_words.json  sym_items.json  vim_commands.json
src/lib/: audio.ts  backup.ts  data.ts  defaultKeyboard.ts  devicePicker.ts  engine.ts  fileDialog.ts  fileDialogTauri.ts  guided.ts  hid.ts  hidTauri.ts  hidTransport.ts  hidWeb.ts  hint.ts  i18n.ts  kb.ts  keycodes.ts  layout.ts  platform.ts  romaji.ts  settings.ts  store.ts
src/styles/: base.css
tests/: app.spec.js  e2e.spec.ts
