[package]
name = "vial-typing"
version = "0.1.0"
description = "Vial Typing"
authors = ["Yoshimasa Niwa"]
edition = "2021"

[lib]
name = "vial_typing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
